--- a/Runtime.Rpi5/Configuration/Platform.props
+++ b/Runtime.Rpi5/Configuration/Platform.props
@@ -14,6 +14,7 @@
 
   <PropertyGroup Condition="'$(Platform)'=='Rpi5'">
     <NMakePreprocessorDefinitions>_RPI5</NMakePreprocessorDefinitions>
+    <Vendor>Raspberry</Vendor>
   </PropertyGroup>
 
 </Project>
