--- a/Blink/Blink.vcxproj
+++ b/Blink/Blink.vcxproj
@@ -19,7 +19,6 @@
     <Import Project="..\Runtime.Rpi5\Runtime.Rpi5.vcxitems" Label="Shared" Condition="'$(Platform)'=='Rpi5'" />
     <Import Project="..\Default\Default.vcxitems" Label="Shared" />
     <Import Project="..\Common\Common.vcxitems" Label="Shared" />
-    <Import Project="..\Firmware\Firmware.vcxitems" Label="Shared" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
@@ -31,12 +30,26 @@
     <ClCompile Include="Application.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Update="C:\Users\svenb\Projekte\Blink\Runtime.Pico\cstddef">
+    <ClInclude Update="C:\Users\svenb\Projekte\Blink\Runtime\cassert">
       <FileType>Document</FileType>
     </ClInclude>
-    <ClInclude Update="C:\Users\svenb\Projekte\Blink\Runtime\exception">
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="C:\Users\svenb\Projekte\Blink\Runtime.Pico\aeabi.S">
       <FileType>Document</FileType>
-    </ClInclude>
+    </None>
+    <None Update="C:\Users\svenb\Projekte\Blink\Runtime.Pico\boot2.bak">
+      <FileType>Document</FileType>
+    </None>
+    <None Update="C:\Users\svenb\Projekte\Blink\Runtime.Pico\boot2.S">
+      <FileType>Document</FileType>
+    </None>
+    <None Update="C:\Users\svenb\Projekte\Blink\Runtime.Pico\boot3.bak">
+      <FileType>Document</FileType>
+    </None>
+    <None Update="C:\Users\svenb\Projekte\Blink\Runtime.Pico\picobin.S">
+      <FileType>Document</FileType>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <Import Project="..\Runtime\Configuration\Platform.targets" />
