--- a/Runtime.Rpi5/Configuration/Debugger.cfg
+++ b/Runtime.Rpi5/Configuration/Debugger.cfg
@@ -7,11 +7,11 @@ set _USE_SMP 0
 reset_config trst_and_srst
 transport select swd
 
-swd newdap _CHIP cpu -expected-id 0x4ba00477 -irlen 4
+swd newdap $_CHIP cpu -expected-id 0x4ba00477 -irlen 4
 adapter speed 4000
 
-dap create _CHIP.dap -chain-position _CHIP.cpu
-target create _CHIP.ap mem_ap -dap _CHIP.dap -ap-num 0
+dap create $_CHIP.dap -chain-position $_CHIP.cpu
+target create $_CHIP.ap mem_ap -dap $_CHIP.dap -ap-num 0
 
 set _DBGBASE {0x80010000 0x80110000 0x80210000 0x80310000}
 set _CTIBASE {0x80020000 0x80120000 0x80220000 0x80320000}
@@ -19,18 +19,18 @@ set _CTIBASE {0x80020000 0x80120000 0x80220000 0x80320000}
 set _smp_command "target smp"
 
 for { set _core 0 } { $_core < $_CORES } { incr _core } {
-    set _CTINAME _CHIP.cti$_core
-    set _TARGETNAME _CHIP.cpu$_core
+    set _CTINAME $_CHIP.cti$_core
+    set _TARGETNAME $_CHIP.cpu$_core
 
-    cti create $_CTINAME -dap _CHIP.dap -ap-num 0 -baseaddr [lindex $_CTIBASE $_core]
-    target create $_TARGETNAME aarch64 -dap _CHIP.dap -ap-num 0 -dbgbase [lindex $_DBGBASE $_core] -cti $_CTINAME
+    cti create $_CTINAME -dap $_CHIP.dap -ap-num 0 -baseaddr [lindex $_CTIBASE $_core]
+    target create $_TARGETNAME aarch64 -dap $_CHIP.dap -ap-num 0 -dbgbase [lindex $_DBGBASE $_core] -cti $_CTINAME
 
     set _smp_command "$_smp_command $_TARGETNAME"
     }
 
 if {$_USE_SMP} { eval $_smp_command }
 
-targets _CHIP.cpu0
+targets $_CHIP.cpu0
 
 init
 reset halt
