--- a/Blink/Blink.vcxproj
+++ b/Blink/Blink.vcxproj
@@ -3,10 +3,6 @@
   <Import Project="..\Runtime\Configuration\Platform.props" />
   <PropertyGroup Label="Globals">
     <ProjectGuid>{0A8C397A-DB1A-41FA-966B-358CE4352EB4}</ProjectGuid>
-    <SccProjectName>$/Examples/Blink/Blink</SccProjectName>
-    <SccAuxPath>https://svenbieg.visualstudio.com</SccAuxPath>
-    <SccLocalPath>.</SccLocalPath>
-    <SccProvider>{4CA58AB2-18FA-4F8D-95D4-32DDF27D184C}</SccProvider>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <Import Project="..\Runtime\Configuration\Default.props" />
@@ -15,10 +11,9 @@
   <ImportGroup Label="ExtensionSettings" />
   <ImportGroup Label="Shared">
     <Import Project="..\Runtime\Runtime.vcxitems" Label="Shared" />
-    <Import Project="..\Runtime.Pico\Runtime.Pico.vcxitems" Label="Shared" Condition="'$(Platform)'=='Pico'" />
     <Import Project="..\Runtime.Rpi5\Runtime.Rpi5.vcxitems" Label="Shared" Condition="'$(Platform)'=='Rpi5'" />
     <Import Project="..\Default\Default.vcxitems" Label="Shared" />
-    <Import Project="..\Common\Common.vcxitems" Label="Shared" />
+    <Import Project="..\Scheduler\Scheduler.vcxitems" Label="Shared" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
@@ -28,28 +23,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Update="C:\Users\svenb\Projekte\Blink\Runtime\cassert">
-      <FileType>Document</FileType>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <None Update="C:\Users\svenb\Projekte\Blink\Runtime.Pico\aeabi.S">
-      <FileType>Document</FileType>
-    </None>
-    <None Update="C:\Users\svenb\Projekte\Blink\Runtime.Pico\boot2.bak">
-      <FileType>Document</FileType>
-    </None>
-    <None Update="C:\Users\svenb\Projekte\Blink\Runtime.Pico\boot2.S">
-      <FileType>Document</FileType>
-    </None>
-    <None Update="C:\Users\svenb\Projekte\Blink\Runtime.Pico\boot3.bak">
-      <FileType>Document</FileType>
-    </None>
-    <None Update="C:\Users\svenb\Projekte\Blink\Runtime.Pico\picobin.S">
-      <FileType>Document</FileType>
-    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <Import Project="..\Runtime\Configuration\Platform.targets" />
