--- a/Runtime/Configuration/Platform.props
+++ b/Runtime/Configuration/Platform.props
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?> 
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
+  <Import Project="$(SolutionDir)Runtime.Pico\Configuration\Platform.props" Condition="Exists('$(SolutionDir)Runtime.Pico\Configuration\Platform.props')" />
   <Import Project="$(SolutionDir)Runtime.Rpi5\Configuration\Platform.props" Condition="Exists('$(SolutionDir)Runtime.Rpi5\Configuration\Platform.props')" />
+  <Import Project="$(SolutionDir)Runtime.Win32\Configuration\Platform.props" Condition="Exists('$(SolutionDir)Runtime.Win32\Configuration\Platform.props')" />
 
 </Project>
