--- a/Runtime/Configuration/Debug.targets
+++ b/Runtime/Configuration/Debug.targets
@@ -14,8 +14,10 @@
       <ElfFile>$(OutDir)$(ProjectName).elf</ElfFile>
       <ElfFile>$([System.String]::Copy('$(ElfFile)').Replace('$(SolutionDir)', './'))</ElfFile>
       <ElfFile>$([System.String]::Copy('$(ElfFile)').Replace('\', '/'))</ElfFile>
-      <GdbExePath>$(CompilerPath)bin\$(CompilerPrefix)gdb.exe</GdbExePath>
-      <GdbExePath>$([System.String]::Copy('$(GdbExePath)').Replace('\', '/'))</GdbExePath>
+      <GccExe>$(CompilerPath)bin\$(CompilerPrefix)gcc.exe</GccExe>
+      <GccExe>$([System.String]::Copy('$(GccExe)').Replace('\', '/'))</GccExe>
+      <GdbExe>$(CompilerPath)bin\$(CompilerPrefix)gdb.exe</GdbExe>
+      <GdbExe>$([System.String]::Copy('$(GdbExe)').Replace('\', '/'))</GdbExe>
       <ForcedIncludes>@(ForcedIncludeList->'%22%(Identity)%22', ', ')</ForcedIncludes>
       <ForcedIncludes>$([System.String]::Copy('$(ForcedIncludes)').Replace('$(SolutionDir)', '${workspaceFolder}/'))</ForcedIncludes>
       <ForcedIncludes>$([System.String]::Copy('$(ForcedIncludes)').Replace('\', '/'))</ForcedIncludes>
@@ -49,9 +51,10 @@
       <CppPropLines Include="%09%22defines%22: [ $(PreprocessorDefs) ]," />
       <CppPropLines Include="%09%22cStandard%22: %22c17%22," />
       <CppPropLines Include="%09%22cppStandard%22: %22c++17%22," />
+      <CppPropLines Include="%09%22compilerPath%22: %22$(GccExe)%22," />
       <CppPropLines Include="%09%22forcedInclude%22: [ $(ForcedIncludes) ]," />
       <CppPropLines Include="%09%22configurationProvider%22: %22ms-vscode.cmake-tools%22," />
-      <CppPropLines Include="%09%22intelliSenseMode%22: %22windows-msvc-x86%22" />
+      <CppPropLines Include="%09%22intelliSenseMode%22: %22gcc-arm64%22" />
       <CppPropLines Include="%09}]" />
       <CppPropLines Include="}" />
     </ItemGroup>
@@ -79,7 +82,7 @@
     <ItemGroup>
       <SettingsLines Include="{" />
       <SettingsLines Include="%22cortex-debug.openocdPath%22: %22$(OpenOcdExePath)%22," />
-      <SettingsLines Include="%22cortex-debug.gdbPath%22: %22$(GdbExePath)%22" />
+      <SettingsLines Include="%22cortex-debug.gdbPath%22: %22$(GdbExe)%22" />
       <SettingsLines Include="}" />
     </ItemGroup>
     <WriteLinesToFile File="$(SolutionDir)\.vscode\settings.json" Lines="@(SettingsLines)" Overwrite="true" />
